--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-native-newsitems",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Renders Newsitems & Co",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/piousbox/react-native-newsitems.git",
   "author": "Victor Pudeyev",
   "license": "MIT",
   "dependencies": {
