--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-newsitems",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Renders Newsitems & Co",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,5 @@
   },
   "repository": "https://github.com/piousbox/react-native-newsitems.git",
   "author": "Victor Pudeyev",
-  "license": "MIT",
-  "dependencies": {
-    "native-base": "^2.4.5",
-    "react": "^16.3.2",
-    "react-native": "^0.55.4"
-  }
+  "license": "MIT"
 }
